--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,15 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.btn-primary {
+  @apply text-white px-[30px] py-2 rounded-3xl bg-primary cursor-pointer hover:opacity-70 transition-all;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.slick-dots {
+  @apply !flex justify-start w-full;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.slick-dots .slick-active div {
+  @apply bg-primary;
 }
